Changed backround of save button; Changed column width, removed the legend and changed content in Status column; Fixed alignment of Target items; Changed the appearance of Rewards Balance panel and button inside

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,14 @@ a.paginate_button,
     color: #6c757d;
 }
 
+.bsl-table-unit {
+    margin-left: 0.6em;
+}
+
+.bsl-table-val {
+    margin-left: 0.7em;
+}
+
 .center {
     text-align: center;
 }
@@ -152,13 +160,11 @@ a.paginate_button,
     margin-left: 1.5em;
 }
 
-.count_panel__link {
-    background: rgb(246, 246, 246);
-    background: -moz-linear-gradient(180deg, rgba(246, 246, 246, 1) 34%, rgba(210, 206, 206, 1) 58%, rgba(233, 233, 233, 1) 84%);
-    background: -webkit-linear-gradient(180deg, rgba(246, 246, 246, 1) 34%, rgba(210, 206, 206, 1) 58%, rgba(233, 233, 233, 1) 84%);
-    background: linear-gradient(180deg, rgba(246, 246, 246, 1) 34%, rgba(210, 206, 206, 1) 58%, rgba(233, 233, 233, 1) 84%);
-    -webkit-box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.4);
-    box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.4);
+.count_panel__link,
+.count-panel-link {
+    background: rgb(233, 233, 233);
+    box-shadow: 1px 1px 1px #000;
+    -webkit-box-shadow: 1px 1px 1px #000;
     border-radius: 10px;
     border: 1px solid #e9e9e9;
     height: 4em;
@@ -170,21 +176,22 @@ a.paginate_button,
     justify-content: center;
 }
 
-.count_panel__link:hover {
-    background: rgb(233, 233, 233);
-    background: -moz-linear-gradient(180deg, rgba(233, 233, 233, 1) 34%, rgba(246, 246, 246, 1) 58%, rgba(210, 206, 206, 1) 84%);
-    background: -webkit-linear-gradient(180deg, rgba(233, 233, 233, 1) 34%, rgba(246, 246, 246, 1) 58%, rgba(210, 206, 206, 1) 84%);
-    background: linear-gradient(180deg, rgba(233, 233, 233, 1) 34%, rgba(246, 246, 246, 1) 58%, rgba(210, 206, 206, 1) 84%);
+.count_panel__link:hover,
+.count-panel-link:hover {
+    background: rgb(224, 224, 224);
+    -webkit-box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.4);
     cursor: pointer;
-    box-shadow: 1px 1px 1px #000;
 }
 
-.count_panel__link:hover a {
+.count_panel__link:hover a,
+.count-panel-link:hover a {
     color: brown;
 }
 
 @media (max-width:1366px) {
-    .count_panel__link {
+    .count_panel__link,
+    .count-panel-link {
         max-width: 16.66667%;
         font-size: 10.5px;
         padding-left: 0;
@@ -379,15 +386,19 @@ a#brand_sku_table_next:hover,
 
 .bsl-status-content {
     display: flex;
-    justify-content: center;
-    font-size: 8px;
+    justify-content: start;
+    align-items: center;
+    font-size: inherit;
 }
 
 .completed_status_icon {
-    padding: 0.4em;
+    margin-right: 1em;
+    margin-left: 1em;
+    padding: 0.6em 0.6em;
     border-radius: 50%;
     background: rgba(91, 177, 91, .925);
     color: #fff;
+    font-size: 6px;
 }
 
 .completed_status_icon_legend {
@@ -870,11 +881,13 @@ input[type="search"] {
 }
 
 .opportunity_status_icon {
-    padding: 0.2em 0.4em;
+    margin-right: 1em;
+    margin-left: 1em;
+    padding: 0.6em 0.6em;
     border-radius: 50%;
     background: rgba(218, 78, 53, .925);
     color: #fff;
-    font-size: 10px;
+    font-size: 6px;
 }
 
 .opportunity_status_icon_legend {
@@ -1639,7 +1652,7 @@ span.count_top {
 
 .statistics_count_container--qtd .statistics_count__pane.statistics_count__pane--main {
     padding: 0.25em 1em 0.25em 0.25em;
-    background: rgba(61, 164, 250, 0.25)!important;
+    background: #ffffff!important;
     border-radius: .25rem;
     border-width: 0;
     text-align: right;
@@ -1665,8 +1678,9 @@ span.count_top {
 .statistics-count-icon-pane {
     display: flex;
     align-items: center;
-    height: 5em;
+    height: 7em;
     text-align: left;
+    justify-content: center;
 }
 
 .statistics_count__pane {
@@ -1815,7 +1829,7 @@ table.dataTable thead th {
 }
 
 .table-input-column .input-group .input-group-append button {
-    margin-right: 0;
+    margin-right: 1em;
     margin-bottom: 0;
     padding-top: 0.2em;
     padding-bottom: 0;
@@ -1836,7 +1850,7 @@ table.dataTable thead th {
 }
 
 .table-input-save-icon {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .table-input-value-left {
@@ -2068,6 +2082,11 @@ td:hover::after,
 th:hover::after {
     background-color: #ececec;
     color: #212529;
+}
+
+td span.bsl-table-unit,
+td span.bsl-table-val {
+    line-height: 18px;
 }
 
 
